Update/Upgrade scalafmt config and apply the changes

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,17 +1,40 @@
-version                    = 2.0.0
-style                      = defaultWithAlign
+version                                         = "2.6.4"
 
-align.openParenCallSite                 = false
-align.openParenDefnSite                 = false
-//align.tokens                            = [{code = "->"}, {code = "<-"}, {code = "=>", owner = "Case"}]
-align.tokens                            = [{code = "->"}, {code = "<-"}]
-continuationIndent.callSite             = 2
-continuationIndent.defnSite             = 2
-danglingParentheses                     = true
-indentOperator                          = spray
-maxColumn                               = 100
-newlines.alwaysBeforeTopLevelStatements = true
-project.excludeFilters                  = [".*\\.sbt"]
-rewrite.rules                           = [AsciiSortImports, RedundantBraces, RedundantParens]
-spaces.inImportCurlyBraces              = true
-unindentTopLevelOperators               = true
+align.preset                                    = none
+align.arrowEnumeratorGenerator                  = true
+align.openParenCallSite                         = false
+align.openParenDefnSite                         = false
+//align.tokens                                  = [{code = "->"}, {code = "<-"}, {code = " = >", owner = "Case"}]
+align.tokens                                    = [{code = "->"}, {code = "<-"}]
+assumeStandardLibraryStripMargin                = true
+align.stripMargin                               = true
+binPack.parentConstructors                      = true
+continuationIndent.callSite                     = 2
+continuationIndent.defnSite                     = 2
+danglingParentheses.preset                      = true
+docstrings                                      = ScalaDoc
+includeCurlyBraceInSelectChains                 = false
+includeNoParensInSelectChains                   = false
+indentOperator.preset                           = spray
+lineEndings                                     = unix
+maxColumn                                       = 120
+newlines.alwaysBeforeCurlyBraceLambdaParams     = false
+newlines.alwaysBeforeElseAfterCurlyIf           = false
+newlines.alwaysBeforeMultilineDef               = true
+newlines.alwaysBeforeTopLevelStatements         = true
+newlines.implicitParamListModifierPrefer        = before
+newlines.neverInResultType                      = true
+newlines.sometimesBeforeColonInMethodReturnType = false
+newlines.topLevelStatements                     = [before,after]
+optIn.annotationNewlines                        = true
+optIn.breakChainOnFirstMethodDot                = true
+project.excludeFilters                          = [".*\\.sbt"]
+project.git                                     = true
+rewrite.rules                                   = [AsciiSortImports, RedundantBraces, RedundantParens, PreferCurlyFors]
+spaces.afterTripleEquals                        = true
+spaces.inImportCurlyBraces                      = true
+unindentTopLevelOperators                       = true
+verticalMultiline.arityThreshold                = 3
+verticalMultiline.atDefnSite                    = false
+rewrite.sortModifiers.order                     = ["`implicit`", "`final`", "`sealed`", "`abstract`", "`override`", "`private`", "`protected`", "`lazy`"]
+rewrite.rules                                   = ["SortModifiers"]
